# acrylic

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: canvas.rs  color.rs  image.rs  lib.rs  main.rs  point.rs
src/primitives/: mod.rs
