[package]
edition = "2018"
name = "acrylic"
version = "0.1.0"
authors = ["Genevive <gen@nyble.dev>"]
description = "A drawing framework"
repository = "https://github.com/gennyble/acrylic"
license-file = "LICENSE"
keywords = ["graphics", "art"]
categories = ["graphics", "multimedia::images", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.1"